Fix buildspec base-directory

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,7 @@ phases:
     runtime-versions:
       nodejs: 14
     commands:
-      - rm -rf node_modules         # 🧹 Clean before install
-      - rm -f package-lock.json     # optional: clean lock file if issues continue
+      - rm -rf node_modules
       - npm install
   build:
     commands:
